--- a/project-SACMS/pom.xml
+++ b/project-SACMS/pom.xml
@@ -60,7 +60,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.clubcreation/com.main.clubcreation.HelloApplication</mainClass>
+                            <mainClass>com.example.clubcreation/com.main.clubcreation.DisplayClubs</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
