--- a/project-SACMS/pom.xml
+++ b/project-SACMS/pom.xml
@@ -61,7 +61,7 @@
             <!-- Default configuration for running with: mvn clean javafx:run -->
             <id>default-cli</id>
             <configuration>
-              <mainClass>com.main.projectsacms/com.main.projectsacms.HelloApplication</mainClass>
+              <mainClass>com.main.projectsacms/com.main.mainAttendance.HelloApplication</mainClass>
               <launcher>app</launcher>
               <jlinkZipName>app</jlinkZipName>
               <jlinkImageName>app</jlinkImageName>
