--- a/project-SACMS/pom.xml
+++ b/project-SACMS/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>jasperreports</artifactId>
             <version>6.20.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
